Slight Changes to Profiler UI (#52)
* Slight changes to profiler UI

* Slight changes to profiler UI

* fixing space

--- a/app/solutions/components/specific-solutions/profiling-solution/profiling-solution.component.html
+++ b/app/solutions/components/specific-solutions/profiling-solution/profiling-solution.component.html
@@ -108,31 +108,38 @@
             Populating last 5 sessions...
         </div>
 
-        <table class="table table-hover table-bordered report-table" *ngIf="checkingExistingSessions===false">
-            <thead class="thead-light">
-                <tr>
-                    <th>Date</th>
-                    <th>Reports</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let session of Sessions">
-                    <td>{{ session.StartTime }} (UTC)</td>
-                    <td>
-                        <div *ngFor="let diagnoser of session.DiagnoserSessions">
-                            <ul style="list-style: none;">
-                                <li *ngFor="let report of diagnoser.Reports">
-                                    {{ getInstanceNameFromReport(report.FileName) }}
-                                    <a href="{{ scmPath }}/api/vfs/data/DaaS/{{ report.RelativePath }}" style="cursor: pointer" target="_blank">
-                                        <i class="fa fa-external-link" aria-hidden="true"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div *ngIf="!checkingExistingSessions">
+            <div *ngIf="Sessions?.length === 0">
+                No sessions found
+            </div>
+            <table *ngIf="Sessions?.length > 0" class="table table-hover table-bordered report-table">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Date</th>
+                        <th>Reports</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let session of Sessions">
+                        <td>{{ session.StartTime }} (UTC)</td>
+                        <td>
+                            <div *ngFor="let diagnoser of session.DiagnoserSessions">
+                                <div *ngIf="diagnoser.Name ==='CLR Profiler'">
+                                    <ul style="list-style: none;">
+                                        <li *ngFor="let report of diagnoser.Reports">
+                                            {{ getInstanceNameFromReport(report.FileName) }}
+                                            <a href="{{ scmPath }}/api/vfs/data/DaaS/{{ report.RelativePath }}" style="cursor: pointer" target="_blank">
+                                                <i class="fa fa-external-link" aria-hidden="true"></i>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
 </default-solution-template>
