--- a/app/solutions/components/specific-solutions/profiling-solution/profiling-solution.component.html
+++ b/app/solutions/components/specific-solutions/profiling-solution/profiling-solution.component.html
@@ -8,7 +8,7 @@
                         <b>{{siteToBeProfiled.siteName}}</b>
                     </td>
                 </tr>
-                <tr>
+                <tr *ngIf="!error">
                     <td>
                         Instance(s):
                     </td>
@@ -25,8 +25,12 @@
                     <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
                     Checking existing sessions...
                 </div>
+                <div class="col" *ngIf="retrievingInstances">
+                    <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
+                    Retrieving instances...
+                </div>
 
-                <button [disabled]="sessionInProgress || checkingExistingSessions" [hidden]="SessionCompleted" class="btn btn-primary" (click)="collectProfilerTrace()">Collect Profiler Trace</button>
+                <button [disabled]="sessionInProgress || checkingExistingSessions || retrievingInstances || retrievingInstancesFailed" [hidden]="SessionCompleted" class="btn btn-primary" (click)="collectProfilerTrace()">Collect Profiler Trace</button>
             </div>
 
             <div class="status-box" *ngIf="sessionInProgress">
@@ -35,12 +39,19 @@
                         {{instancestatus.key}}
                     </option>
                 </select>
-
-                <step-wizard [CurrentStep]="sessionStatus" [WizardSteps]="WizardSteps" ></step-wizard>
-               
+                <step-wizard [CurrentStep]="sessionStatus" [WizardSteps]="WizardSteps"></step-wizard>
             </div>
         </div>
 
+    </div>
+
+    <div class="focus-box focus-box-warning" style="margin-top:20px" *ngIf="error">
+        <div *ngIf="error.code === 'GatewayTimeout'">
+            <strong>Error</strong> - Failed to fetch instances for the Web App. The instance may fail to respond to any diagnostic calls under high CPU situations. Please retry this investigation after some time.
+        </div>
+        <div *ngIf="error.code != 'GatewayTimeout'">
+            <strong>Error</strong> - {{ error.message }}
+        </div>
     </div>
 
     <div class="status-box" *ngIf="Reports?.length > 0">
@@ -64,5 +75,5 @@
     </ul>
 
     <daas-sessions SessionType="CLR Profiler" [checkingExistingSessions]="checkingExistingSessions" [Sessions]="Sessions"></daas-sessions>
-    
+
 </default-solution-template>
