Fix links to reports

--- a/app/solutions/components/specific-solutions/memorydump-solution/memorydump-solution.component.html
+++ b/app/solutions/components/specific-solutions/memorydump-solution/memorydump-solution.component.html
@@ -64,6 +64,6 @@
         <li *ngFor="let statement of thingsToKnowBefore">{{statement}}</li>
     </ul>
 
-    <daas-sessions SessionType="Memory Dump" [checkingExistingSessions]="checkingExistingSessions" [Sessions]="Sessions"></daas-sessions>
+    <daas-sessions SessionType="Memory Dump" [scmPath]="scmPath" [checkingExistingSessions]="checkingExistingSessions" [Sessions]="Sessions"></daas-sessions>
 
 </default-solution-template>
