--- a/app/solutions/components/specific-solutions/memorydump-solution/memorydump-solution.component.html
+++ b/app/solutions/components/specific-solutions/memorydump-solution/memorydump-solution.component.html
@@ -1,5 +1,5 @@
 <default-solution-template [title]="title" [description]="description" [tags]="data.tags">
-    <div class="action-box">
+    <div class="action-box" *ngIf="siteToBeDumped">
         <div>
             <table style="border:none">
                 <tr>
