--- a/app/availability/analysis/app-analysis.component.html
+++ b/app/availability/analysis/app-analysis.component.html
@@ -1,38 +1,28 @@
 <div style="min-height: 100%">
-    <app-current-health *ngIf="!bladeOpenedFromSupportTicketFlow" [runtimeAvailabilityResponse]="runtimeAvailabilityResponse" [serviceHealthResponse]="serviceHealthResponse"
-    [bladeOpenedFromSupportTicketFlow]="bladeOpenedFromSupportTicketFlow" (refreshClicked)="onRefreshClicked($event)">
+    <app-current-health *ngIf="!bladeOpenedFromSupportTicketFlow" [runtimeAvailabilityResponse]="runtimeAvailabilityResponse"
+        [serviceHealthResponse]="serviceHealthResponse" [bladeOpenedFromSupportTicketFlow]="bladeOpenedFromSupportTicketFlow"
+        (refreshClicked)="onRefreshClicked($event)">
     </app-current-health>
     <div class="row">
-        <availability-graph [(displayGraph)]="showLast24Hours" [topLevelGraphRefreshIndex]="topLevelGraphRefreshIndex">
-            <downtime-timeline [appAnalysisResponse]='analysisResponse' [(selectedDowntimeIndex)]='selectedTimePeriodIndex'></downtime-timeline>
+        <availability-graph [(displayGraph)]="showLast24Hours" [displayTimeLine]="true" [topLevelGraphRefreshIndex]="topLevelGraphRefreshIndex">
+            <downtime-timeline [appAnalysisResponse]='analysisResponse' [(selectedDowntimeIndex)]='selectedTimePeriodIndex' [problemDescription]='problemDescription'></downtime-timeline>
         </availability-graph>
-        
+
         <br/>
 
-        <div class="row" >
+        <div class="row">
             <div class="col-md-12">
                 <div *ngIf="loadingAnalysis">
                     <i class="fa fa-circle-o-notch fa-2x fa-spin spin-icon" aria-hidden="true"></i>
                     <span [@loadingAnimation]="showLoadingMessage ? 'shown' : 'hidden'" class="loading-message">{{loadingMessages[loadingMessageIndex]}}</span>
                 </div>
-                <observations-availability *ngIf="analysisResponse && runtimeAvailabilityResponse" 
-                    [analysisResponse]='analysisResponse' 
-                    [runtimeAvailabilityResponse]="runtimeAvailabilityResponse" 
-                    [selectedDowntimeIndex]="selectedTimePeriodIndex"
-                    [openedFromTicketFlow]="bladeOpenedFromSupportTicketFlow">
-                </observations-availability>
-                <br/>
-                <solution-list *ngIf="abnormalTimePeriods && selectedTimePeriodIndex >= 0" 
-                    [abnormalTimePeriod]="abnormalTimePeriods[selectedTimePeriodIndex]"
-                    [openedFromTicketFlow]="bladeOpenedFromSupportTicketFlow">
-                </solution-list>
+                <problem-solution *ngIf="analysisResponse && runtimeAvailabilityResponse" [showAppInsights]="true" [analysisResponseInput]="analysisResponse"
+                    [selectedTimePeriodIndexInput]="selectedTimePeriodIndex" [openedFromTicketOpeningFlow]="bladeOpenedFromSupportTicketFlow" [problemDescription]='problemDescription'>
+                </problem-solution>
             </div>
         </div>
     </div>
 </div>
 
 <feedback-form [source]="'appanalysis'"></feedback-form>
-<default-solutions style="margin-top:40px"  *ngIf="runtimeAvailabilityResponse && !bladeOpenedFromSupportTicketFlow"></default-solutions>
-
-
-<!--<open-ticket *ngIf="analysisResponse"></open-ticket>-->
+<default-solutions style="margin-top:40px" *ngIf="runtimeAvailabilityResponse && !bladeOpenedFromSupportTicketFlow"></default-solutions>
