--- a/app/availability/analysis/availability-graph.component.css
+++ b/app/availability/analysis/availability-graph.component.css
@@ -2,3 +2,13 @@
     background-color: #5bc0de;
     border-color:#5bc0de;
 }
+
+.timeline-control {
+    background-color: #f9f9f9;
+    padding-top: 10px;
+    padding-bottom: 5px;
+}
+
+.panel {
+    margin-bottom: 10px;
+}
