--- a/app/availability/app-insights/exceptions/app-insights-exceptions.component.html
+++ b/app/availability/app-insights/exceptions/app-insights-exceptions.component.html
@@ -1,51 +1,39 @@
-<div *ngIf="appInsightsService.appInsightsSettings.validForStack && appInsightsService.appInsightsSettings.enabledForWebApp"
-    class="panel panel-default" style="margin-top:15px;margin-bottom:20px;background-color:transparent">
-    <div class="panel-heading" style="font-weight:500;font-size:14px">
-        <img src="https://azure.microsoft.com/svghandler/application-insights/?width=18&height=18"> Top Server Exceptions During This Time
-        <div class="pull-right hyperlink" style="font-size:13px" (click)="OpenAppInsights()">
+<div style="text-align: center; padding:20px" *ngIf="loading">
+    <i class="fa fa-circle-o-notch fa-2x fa-spin spin-icon" aria-hidden="true"></i>
+</div>
+
+<div *ngIf="!loading && exceptions.length > 0">
+    <table class="table table-hover table-responsive no-border">
+        <thead>
+            <tr>
+                <th *ngIf="includeMessage">Message</th>
+                <th>Exception</th>
+                <th>Count</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of exceptions" style="font-size:13px">
+                <td *ngIf="includeMessage">{{item.message}}</td>
+                <td>{{item.exception}}</td>
+                <td>{{item.count}}</td>
+            </tr>
+        </tbody>
+
+    </table>
+    <div style="width:100%;text-align:right;font-size:13px;padding:3px">
+        <a (click)="OpenAppInsights()">
             View More in App Insights
-            <i class="fa fa-chevron-right" aria-hidden="true" style="margin-left:5px"></i>
-        </div>
+            <i class="fa fa-arrow-circle-o-right" style="font-size: 15px"></i>
+        </a>
     </div>
-    <div class="panel-body" style="min-height:100px;overflow:auto">
-        <div *ngIf="loading" style="font-size:14px;margin-bottom:10px">
-            <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true" style="color:#696969"></i>
-            Fetching exceptions from Application Insights
-        </div>
-        <table *ngIf="!loading && exceptions.length > 0" class="table table-bordered table-hover table-responsive">
-            <thead>
-                <tr class="info">
-                    <th>Message</th>
-                    <th>Exception</th>
-                    <th>Count</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let item of exceptions" style="font-size:13px">
-                    <td>{{item.message}}</td>
-                    <td>{{item.exception}}</td>
-                    <td>{{item.count}}</td>
-                </tr>
-            </tbody>
+</div>
 
-        </table>
 
-        <div *ngIf="!loading && exceptions.length === 0" style="font-size:14px;margin-bottom:10px">
-            No Exceptions found during this time.
-            <br />
-            Learn how to log exceptions to application insights <a class="hyperlink" href="https://goo.gl/thnx4Y" target="_blank">here</a>.
-            
-        </div>
 
-        <!-- TODO : Enable this code when shipping App Insights Connection-->
-        <!--<div class="alert alert-warning" role="alert" style="margin-bottom:0" *ngIf="!appInsightsService.appInsightsSettings.connectedWithSupportCenter">
-            Looks like your application insights resource
-            <span style="font-weight:500;color:black">{{appInsightsService.appInsightsSettings.name}}</span> is not connected with App Service diagnostics. Connect
-            your application insights resource with App Service diagnostics to gain better insights about your failures and
-            correlation with platform events.
 
-            <span style="margin-left:5px" class="hyperlink" [routerLink]="['../../settings/appinsights']">Edit Settings</span>
+<div *ngIf="!loading && exceptions.length === 0" style="font-size:16px;padding:10px">
+    No Exceptions found during this time.
+    <br /> Learn how to log exceptions to application insights
+    <a class="hyperlink" href="https://goo.gl/thnx4Y" target="_blank">here</a>.
 
-        </div>-->
-    </div>
 </div>
