--- a/app/shared/components/downtime-timeline/downtime-timeline.component.css
+++ b/app/shared/components/downtime-timeline/downtime-timeline.component.css
@@ -60,3 +60,28 @@
     font-size:20px;
     color: #333333;
 }
+
+td, th {
+    padding:  0px 5px 0px 0px;
+    margin:5px;
+}
+
+.time-label {
+    padding-right: 10px;
+    padding-left: 10px;
+    background-color: #949494;
+    border: 1px solid #848484;
+    border-right: none;
+    color: white;
+}
+
+.time-value {
+    padding-left: 5px;
+    background-color: #ffffff;
+    border: 1px solid #848484;
+    border-left: none;
+}
+
+b {
+    font-weight: 500;
+}
