--- a/app/shared/components/scrolling-tile/scrolling-tile.component.html
+++ b/app/shared/components/scrolling-tile/scrolling-tile.component.html
@@ -1,7 +1,8 @@
 <ngu-carousel [inputs]="carouselTile" (initData)="initDataFn($event)" (carouselLoad)="carouselTileLoad($event)">
-    <ngu-tile NguCarouselItem *ngFor="let problemType of ProblemTypes">
-        <div class="tile" [style.background-color]="problemType.BgColor">
-            <div class="col category-container animated zoomIn" [style.background-color]="problemType.BgColor" [style.color]="problemType.TextColor"
+    <ngu-tile NguCarouselItem *ngFor="let problemType of ProblemTypes" style="padding:5px;width:135px">
+        <div class="tile" [style.background-color]="problemType.BgColor" style="text-align:center">
+            <div class="col animated zoomIn category-box" 
+            [style.background-color]="problemType.BgColor" [style.color]="problemType.TextColor"
                 [routerLink]="[problemType.Href]" (click)="logCategorySelected(problemType.Name)">
                 <div class="category-content">{{problemType.Name}}</div>
             </div>
