--- a/app/shared/components/scrolling-tile/scrolling-tile.component.css
+++ b/app/shared/components/scrolling-tile/scrolling-tile.component.css
@@ -1,8 +1,22 @@
 .tile {
-    width: 100%;
-    height: 90px;
+    width: 125px;
+    height: 75px;
+    text-align:center;
     background-size: cover !important;
 }
+
+.item {
+    padding:5px;
+    width:130px;
+}
+
+.category-box
+{
+    height: 70px;
+    border-radius: 3px;
+    display:inline-block;
+}
+
 
 .leftRs {
     position: absolute;
