--- a/app/shared/components/scrolling-tile/scrolling-tile.component.css
+++ b/app/shared/components/scrolling-tile/scrolling-tile.component.css
@@ -2,18 +2,20 @@
     width: 125px;
     height: 75px;
     text-align:center;
+    border-radius: 3px;
     background-size: cover !important;
 }
 
-.item {
-    padding:5px;
-    width:130px;
+.tile:hover {
+    cursor: pointer;
+    -webkit-box-shadow: 0px 0px 4px 0px #8a8a8a;
+    -moz-box-shadow: 0px 0px 4px 0px #8a8a8a;
+    box-shadow: 0px 0px 4px 0px #8a8a8a;
 }
 
 .category-box
 {
     height: 70px;
-    border-radius: 3px;
     display:inline-block;
 }
 
