--- a/app/shared/components/scrolling-tile/scrolling-tile.component.css
+++ b/app/shared/components/scrolling-tile/scrolling-tile.component.css
@@ -25,11 +25,14 @@
     margin: auto;
     top: 0;
     bottom: 0;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, .3);
-    border-radius: 999px;
+    border-radius: 999px; 
+    font-size: x-large;
     left: 0;
+    background-color: whitesmoke;
+    border: 1px solid lightskyblue;
 }
 
 .rightRs {
@@ -37,9 +40,13 @@
     margin: auto;
     top: 0;
     bottom: 0;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, .3);
-    border-radius: 999px;
+    border-radius: 999px; 
     right: 0;
+    font-size: x-large;
+    background-color: whitesmoke;
+    border: 1px solid lightskyblue;
+    
 }
