--- a/app/supportbot/message-flow/main-menu/main-menu.component.html
+++ b/app/supportbot/message-flow/main-menu/main-menu.component.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="category-container-header">Select Problem Category</div>
     <div *ngFor="let category of problemCategories;let i = index">
-        <collapsible-list [title]="category.Name" [collapsed]="category.Collapsed">
+        <collapsible-list [title]="category.Name" [collapsed]="category.Collapsed" >
             <collapsible-list-item>
-                <scrolling-tile [Subcategories]="category.Subcategories" ></scrolling-tile>
+                <scrolling-tile [Collapsed]="category.Collapsed" [Subcategories]="category.Subcategories" ></scrolling-tile>
             </collapsible-list-item>
         </collapsible-list>
     </div>
