--- a/app/shared/components/daas/profiler.component.html
+++ b/app/shared/components/daas/profiler.component.html
@@ -1,69 +1,92 @@
-<div class="action-box" *ngIf="siteToBeProfiled">
-    <div>
-        <table style="border:none">
-            <tr>
-                <td>App to be Profiled: </td>
-                <td class="highlight-blue">
-                    <b>{{siteToBeProfiled.siteName}}</b>
-                </td>
-            </tr>
-            <tr *ngIf="!error">
-                <td>
-                    Instance(s):
-                </td>
-                <td class="highlight-blue">
-                    <span *ngFor="let instance of instances; let isLast=last">
-                        {{instance}}{{isLast? '':','}}
-                    </span>
-                </td>
-            </tr>
+<div *ngIf="!supportedTier">
+    <div class="focus-box focus-box-warning" style="margin-top:20px">
+        <div>
+            <strong>Error</strong> - This tool is supported only on Dedicated SKU's
+        </div>
+    </div>
+</div>
+<div *ngIf="supportedTier">
+    <div class="action-box" *ngIf="siteToBeProfiled">
+        <div>
+            <table style="border:none">
+                <tr>
+                    <td>App to be Profiled: </td>
+                    <td class="highlight-blue">
+                        <b>{{siteToBeProfiled.siteName}}</b>
+                    </td>
+                </tr>
+                <tr *ngIf="!error">
+                    <td>
+                        Instance(s):
+                    </td>
+                    <td class="highlight-blue">
+                        <span *ngFor="let instance of instances; let isLast=last">
+                            {{instance}}{{isLast? '':','}}
+                        </span>
+                    </td>
+                </tr>             
+            </table>
+
+            <div style="text-align:right">
+                <div class="col" *ngIf="checkingExistingSessions">
+                    <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
+                    Checking existing sessions...
+                </div>
+                <div class="col" *ngIf="retrievingInstances">
+                    <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
+                    Retrieving instances...
+                </div>
+
+                <button [disabled]="sessionInProgress || checkingExistingSessions || retrievingInstances || retrievingInstancesFailed" [hidden]="SessionCompleted"
+                    class="btn btn-primary" (click)="collectProfilerTrace()">Collect Profiler Trace</button>
+                <div style="margin-top:5px">
+                    <input type="checkbox"  [(ngModel)]="collectStackTraces"/> With thread report
+                    <div class="tool-tip" style="z-index:2">
+                        <i class="fa fa-info-circle" style="color:rgb(84, 143, 255)"></i>
+                        <span class="tool-tip-text">If this option is enabled, then along with the profiler trace, a thread report of all the threads in
+                            the process is also collected at the end of the profiler trace. This is useful espeically if you are troubleshooting totally hung processes or deadlocks or requests taking more than 60 seconds.This will have the effect of pausing your process for a few seconds till the thread dump is generated.
+                            <div style="margin-top:10px">
+                                CAUTION : This option is NOT recommended if you are experiencing high CPU on the instance.
+                            </div>
+                        </span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="status-box" *ngIf="sessionInProgress">
+                <select id="selectInstances" (change)="onInstanceChange($event.target.value)">
+                    <option *ngFor="let instancestatus of InstancesStatus | mapValues" value={{instancestatus.key}}>
+                        {{instancestatus.key}}
+                    </option>
+                </select>
+                <step-wizard [CurrentStep]="sessionStatus" [WizardSteps]="WizardSteps"></step-wizard>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="focus-box focus-box-warning" style="margin-top:20px" *ngIf="error">
+        <div *ngIf="error.code === 'GatewayTimeout'">
+            <strong>Error</strong> - Failed to fetch instances for the web app. The instance may fail to respond to any diagnostic
+            calls under high CPU situations. Please retry this investigation after some time.
+        </div>
+        <div *ngIf="error.code != 'GatewayTimeout'">
+            <strong>Error</strong> - {{ error.message }}
+        </div>
+    </div>
+
+    <div class="status-box" *ngIf="Reports?.length > 0">
+        <table class="table table-hover">
+            <tbody>
+                <tr *ngFor="let report of Reports">
+                    <td>
+                        {{ report.FileName }}
+                    </td>
+                    <td>
+                        <a (click)="openReport(report.RelativePath)" class="btn btn-primary">Open Report</a>
+                    </td>
+                </tr>
+            </tbody>
         </table>
-
-        <div style="text-align:right">
-            <div class="col" *ngIf="checkingExistingSessions">
-                <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
-                Checking existing sessions...
-            </div>
-            <div class="col" *ngIf="retrievingInstances">
-                <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
-                Retrieving instances...
-            </div>
-
-            <button [disabled]="sessionInProgress || checkingExistingSessions || retrievingInstances || retrievingInstancesFailed" [hidden]="SessionCompleted" class="btn btn-primary" (click)="collectProfilerTrace()">Collect Profiler Trace</button>
-        </div>
-
-        <div class="status-box" *ngIf="sessionInProgress">
-            <select id="selectInstances" (change)="onInstanceChange($event.target.value)">
-                <option *ngFor="let instancestatus of InstancesStatus | mapValues" value={{instancestatus.key}}>
-                    {{instancestatus.key}}
-                </option>
-            </select>
-            <step-wizard [CurrentStep]="sessionStatus" [WizardSteps]="WizardSteps"></step-wizard>
-        </div>
     </div>
-
-</div>
-
-<div class="focus-box focus-box-warning" style="margin-top:20px" *ngIf="error">
-    <div *ngIf="error.code === 'GatewayTimeout'">
-        <strong>Error</strong> - Failed to fetch instances for the web app. The instance may fail to respond to any diagnostic calls under high CPU situations. Please retry this investigation after some time.
-    </div>
-    <div *ngIf="error.code != 'GatewayTimeout'">
-        <strong>Error</strong> - {{ error.message }}
-    </div>
-</div>
-
-<div class="status-box" *ngIf="Reports?.length > 0">
-    <table class="table table-hover">
-        <tbody>
-            <tr *ngFor="let report of Reports">
-                <td>
-                    {{ report.FileName }}
-                </td>
-                <td>
-                    <a (click)="openReport(report.RelativePath)" class="btn btn-primary">Open Report</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
 </div>
