Fixing up formatting

--- a/src/app/supportbot/message-flow/main-menu/main-menu.component.html
+++ b/src/app/supportbot/message-flow/main-menu/main-menu.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin-bottom: 10px;">
     <div class="category-container-header">Select Problem Category</div>
     <div *ngFor="let category of problemCategories;let i = index">
         <collapsible-list [title]="category.Name" [collapsed]="category.Collapsed" >
