Adding Incident Notification

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
 
         </ul>
     </div>
+    <incident-notification></incident-notification>
     <div id="app-content" class="panel-body" [style.max-height.px]="contentMaxHeight">
         <div class="tab-content container-fluid">
             <router-outlet></router-outlet>
