Making Layout changes and Refactoring Profiler out of DAAS to avoid code duplication (#103)
* More DAAS Changes
* Refactoring Profiler Component and DAAS component and cleaning them up
* Correcting ThreadStacks for Profiler
* Adding LogClicked method

--- a/src/app/shared/components/daas/daas.component.html
+++ b/src/app/shared/components/daas/daas.component.html
@@ -1,11 +1,6 @@
-<div *ngIf="!supportedTier">
-    <div class="focus-box focus-box-warning" style="margin-top:20px">
-        <div>
-            <strong>Error</strong> - This tool is supported only on Dedicated SKU's
-        </div>
-    </div>
-</div>
-<div *ngIf="supportedTier">
+<daas-validator [siteToBeDiagnosed]="siteToBeDiagnosed" [DiagnoserName]="DiagnoserName" (DaasValidated)="onDaasValidated($event)"></daas-validator>
+
+<div *ngIf="daasValidated">
     <div class="action-box" *ngIf="siteToBeDiagnosed">
         <div>
             <table style="border:none">
@@ -15,7 +10,7 @@
                         <b>{{siteToBeDiagnosed.siteName}}</b>
                     </td>
                 </tr>
-                <tr *ngIf="!error && !foundDiagnoserWarnings">
+                <tr *ngIf="!error">
                     <td>
                         Instance(s):
                     </td>
@@ -29,20 +24,12 @@
             </table>
 
             <div style="text-align:right">
-                <div class="col" *ngIf="checkingExistingSessions">
+                <div class="col" *ngIf="operationInProgress">
                     <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
-                    Checking existing sessions...
+                    {{ operationStatus }}
                 </div>
-                <div class="col" *ngIf="retrievingInstances">
-                    <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
-                    Retrieving instances...
-                </div>
-                <div class="col" *ngIf="retrievingDiagnosers && !retrievingInstances && !checkingExistingSessions">
-                    <i class="fa fa-circle-o-notch fa-spin spin-icon" aria-hidden="true"></i>
-                    Retrieving Diagnoser settings...
-                </div>
-
-                <button [disabled]="sessionInProgress || checkingExistingSessions || retrievingInstances || retrievingInstancesFailed || retrievingDiagnosers || foundDiagnoserWarnings"
+                
+                <button [disabled]="sessionInProgress || operationInProgress || retrievingInstancesFailed"
                     [hidden]="SessionCompleted" class="btn btn-primary" (click)="collectDiagnoserData()">Collect {{ DiagnoserName }}</button>
             </div>
 
@@ -65,13 +52,7 @@
             <div *ngIf="error.code != 'GatewayTimeout'">
                 <strong>Error</strong> - {{ error.message }}
             </div>
-        </div>
-
-        <div class="focus-box focus-box-warning" style="margin-top:20px" *ngIf="foundDiagnoserWarnings">
-            <div>
-                <strong>Warning</strong> - {{ diagnoserWarning }}
-            </div>
-        </div>
+        </div>        
     </div>
 
     <div class="status-box" *ngIf="Reports?.length > 0">
