--- a/src/app/shared/components/tools/connection-diagnoser-tool/connection-diagnoser-tool.component.html
+++ b/src/app/shared/components/tools/connection-diagnoser-tool/connection-diagnoser-tool.component.html
@@ -1,6 +1,5 @@
 <div class="container">
     <div class="header1">Check Connection Strings</div>
-    
     <p>This tool validates all the connection strings configured for your App (either as app-settings, environment variables
         or inside the configuration files) and helps you to identify successful vs. failing connections from the App Service
         instance.
@@ -27,7 +26,8 @@
                         <i class="fa health-icon fa-check-circle healthy-icon-color" *ngIf="connection.Succeeded" aria-hidden="true"></i>
                     </span>
                     <b>{{ connection.Name }}</b>
-                    <span class="pull-right">
+                    <span>({{ getDatabaseTypeName(connection) }})</span>
+                    <span class="pull-right">                        
                         <i class="fa fa-plus" *ngIf="!connection.Expanded" aria-hidden="true"></i>
                         <i class="fa fa-minus" *ngIf="connection.Expanded" aria-hidden="true"></i>
                     </span>
@@ -101,4 +101,5 @@
             </div>
         </div>
     </div>
+    <feedback-form [source]="'connectiondiagnoser'"></feedback-form>
 </div>
