--- a/src/app/supportbot/message-flow/main-menu/main-menu.component.css
+++ b/src/app/supportbot/message-flow/main-menu/main-menu.component.css
@@ -7,3 +7,19 @@
     margin: 10px;
     vertical-align: top;
 }
+
+.area {
+    text-align: center;
+    display:block;
+    margin-left: 15px;
+}
+
+.content {
+    display:table;
+    vertical-align:middle;
+}
+
+.change-stack{
+    cursor:pointer;
+    color:#3999c6;
+}
