--- a/src/app/supportbot/message-flow/main-menu/main-menu.component.html
+++ b/src/app/supportbot/message-flow/main-menu/main-menu.component.html
@@ -1,14 +1,40 @@
 <div class="row" style="margin-bottom: 10px;">
     <div class="category-container-header">Select Problem Category</div>
     <div *ngFor="let category of problemCategories;let i = index">
-        <collapsible-list [title]="category.Name" [collapsed]="category.Collapsed" >
+        <collapsible-list [title]="category.Name" [collapsed]="category.Collapsed">
             <collapsible-list-item>
-                <div class="col animated zoomIn category-box" *ngFor="let subcategory of category.Subcategories" [style.background-color]="subcategory.BgColor" 
-                    [style.color]="subcategory.TextColor" [routerLink]="[subcategory.Href]" (click)="logCategorySelected(subcategory.Name)">
+                <div [ngClass]="animateToolsOnly && category.Name !=='Diagnostic Tools'?'col zoomIn category-box':'col zoomIn animated  category-box'"
+                    *ngFor="let subcategory of category.Subcategories" [style.background-color]="subcategory.BgColor" [style.color]="subcategory.TextColor"
+                    [routerLink]="[subcategory.Href]" (click)="logCategorySelected(subcategory.Name)">
                     <div class="category-content">{{subcategory.Name}}</div>
                 </div>
                 <!-- <scrolling-tile [Collapsed]="category.Collapsed" [Subcategories]="category.Subcategories" ></scrolling-tile> -->
             </collapsible-list-item>
+            <div *ngIf="category.Name ==='Diagnostic Tools'" class="area">
+                <div class="content">
+                    Showing tools for
+                    <strong>{{ AppStack }}</strong>.
+                    <div style="display:inline-block" class="dropup">
+                        <!-- <button class="btn btn-link dropdown-toggle" (click)="showToolsDropdown = !showToolsDropdown" id="dropdownMenu1">Change stack</button> -->
+                        <a class="dropdown-toggle" (click)="showToolsDropdown = !showToolsDropdown">Change Stack</a>
+                        <ul class="dropdown-menu" style="cursor: pointer" aria-labelledby="dropdownMenu1" [ngClass]="{'show': showToolsDropdown ===
+                    true, 'hide': showToolsDropdown === false}">
+                            <li (click)="onStackChanged('ASP.Net')">
+                                <a>ASP.Net</a>
+                            </li>
+                            <li (click)="onStackChanged('ASP.Net Core')">
+                                <a>ASP.NET Core</a>
+                            </li>
+                            <li (click)="onStackChanged('Java')">
+                                <a>Java</a>
+                            </li>
+                            <li (click)="onStackChanged('PHP')">
+                                <a>PHP</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </collapsible-list>
     </div>
 </div>
