Toolsminor ui fixes and separating Daas Sessions stuff completely in a different component (#107)
* Slight alignment fixes for the network trace tool
* Moving the sessions part in to its own component
* Correcting all the child components

--- a/src/app/shared/components/tools/profiler-tool/profiler-tool.component.html
+++ b/src/app/shared/components/tools/profiler-tool/profiler-tool.component.html
@@ -4,8 +4,7 @@
 
     <div class="wizardcontainer">
 
-        <profiler [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeProfiled" (checkingExistingSessionsEvent)="updateCheckingExistingSessions($event)"
-            (SessionsEvent)="updateSessions($event)">
+        <profiler [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed" (SessionsEvent)="updateSessions($event)">
         </profiler>
 
     </div>
@@ -16,7 +15,7 @@
     </ul>
 
     <div class="sessions">
-        <daas-sessions SessionType="CLR Profiler" [scmPath]="scmPath" [checkingExistingSessions]="checkingExistingSessions" [Sessions]="Sessions"></daas-sessions>
+        <daas-sessions [refreshSessions]="refreshSessions" DiagnoserNameLookup="CLR Profiler" [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed"></daas-sessions>
     </div>
 
 </div>
