--- a/src/app/solutions/components/specific-solutions/profiling-solution/profiling-solution.component.html
+++ b/src/app/solutions/components/specific-solutions/profiling-solution/profiling-solution.component.html
@@ -1,7 +1,6 @@
 <default-solution-template [title]="title" [description]="description" [tags]="data.tags">
 
-    <profiler [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeProfiled" (checkingExistingSessionsEvent)="updateCheckingExistingSessions($event)"
-        (SessionsEvent)="updateSessions($event)">
+    <profiler [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed" (SessionsEvent)="updateSessions($event)">
     </profiler>
 
     <div class="header2">What you should know before performing a Profiler Trace</div>
@@ -9,6 +8,6 @@
         <li *ngFor="let statement of thingsToKnowBefore">{{statement}}</li>
     </ul>
 
-    <daas-sessions SessionType="CLR Profiler" [scmPath]="scmPath" [checkingExistingSessions]="checkingExistingSessions" [Sessions]="Sessions"></daas-sessions>
+    <daas-sessions [refreshSessions]="refreshSessions" DiagnoserNameLookup="CLR Profiler" [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed"></daas-sessions>
 
 </default-solution-template>
