--- a/src/app/shared/components/tools/memorydump-tool/memorydump-tool.component.html
+++ b/src/app/shared/components/tools/memorydump-tool/memorydump-tool.component.html
@@ -3,8 +3,7 @@
     <p>{{ description }}</p>
     <div class="wizardcontainer">
 
-        <daas [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed" [DiagnoserName]="DiagnoserName" (checkingExistingSessionsEvent)="updateCheckingExistingSessions($event)"
-            (SessionsEvent)="updateSessions($event)">
+        <daas [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed" [DiagnoserName]="DiagnoserName" (SessionsEvent)="updateSessions($event)">
         </daas>
     </div>
 
@@ -14,6 +13,6 @@
     </ul>
 
     <div class="sessions">
-        <daas-sessions SessionType="Memory Dump" [scmPath]="scmPath" [checkingExistingSessions]="checkingExistingSessions" [Sessions]="Sessions"></daas-sessions>
+        <daas-sessions [refreshSessions]="refreshSessions" DiagnoserNameLookup="Memory Dump" [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed"></daas-sessions>
     </div>
 </div>
