--- a/src/app/solutions/components/specific-solutions/java-threaddump-solution/java-threaddump-solution.component.html
+++ b/src/app/solutions/components/specific-solutions/java-threaddump-solution/java-threaddump-solution.component.html
@@ -1,8 +1,6 @@
 <default-solution-template [title]="title" [description]="description" [tags]="data.tags">
     
-    <daas [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed" 
-    [DiagnoserName]="DiagnoserName" (checkingExistingSessionsEvent)="updateCheckingExistingSessions($event)"
-    (SessionsEvent)="updateSessions($event)">
+    <daas [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed" [DiagnoserName]="DiagnoserName" (SessionsEvent)="updateSessions($event)">
     </daas>
 
     <div class="header2">What you should know before collecting a Java Thread Dump</div>
@@ -10,6 +8,6 @@
         <li *ngFor="let statement of thingsToKnowBefore">{{statement}}</li>
     </ul>
 
-    <daas-sessions SessionType="JAVA Thread Dump" [scmPath]="scmPath" [checkingExistingSessions]="checkingExistingSessions" [Sessions]="Sessions"></daas-sessions>
+    <daas-sessions [refreshSessions]="refreshSessions" DiagnoserNameLookup="JAVA Thread Dump" [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed"></daas-sessions>
 
 </default-solution-template>
